--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "module": "ES2022",
+    "module": "NodeNext",
     "target": "ES2022",
     "moduleResolution": "NodeNext"
   }
